--- a/src/components/menu-list-item/menu-list-item.scss
+++ b/src/components/menu-list-item/menu-list-item.scss
@@ -40,3 +40,18 @@
         cursor: pointer;
     }
 }
+
+.menu_category_logo{
+    width: 150px;
+    height: 150px;
+    background-size: cover;
+}
+.pizza{
+    background-image: url("https://ambar.net.ua/image/data/menu/pizza.png");
+}
+.salads{
+    background-image: url("https://ohsheglows.com/gs_images/2013/09/choppedsaladsquare-9694-256x256.jpg");
+}
+.meat{
+    background-image: url("https://www.gensh.in/fileadmin/Database/Items/Ingredient/Item_Raw_Meat.png");
+}
